microserv-parking/src/main/java/org/example/microservparking/error/exception/NotExistsException.java
package org.example.microservparking.error.exception;

public class NotExistsException extends RuntimeException{

    public NotExistsException(String message) {
        super(message);
    }
}
